Add Funcionalidade Finalizar Pedido
Funcionalidade de finalizar pedido no banco de dados.

--- a/src/main/webapp/css/mobile.css
+++ b/src/main/webapp/css/mobile.css
@@ -339,3 +339,19 @@ button.voltar {
 	display: block;
 	margin: 5px auto 5px auto;
 }
+
+a.buttonLink{
+	text-decoration: none;
+}
+
+a.buttonLink:visited {
+	text-decoration: none;
+	color: black;
+}
+
+.finalizar {
+	display: block;
+	margin: 5px auto 5px auto;
+
+	font-size: 1.25em; 
+}
